[package]
name = "gitex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.72"
csv = "^1.2.2"
git2 = "^0.17.2"
indicatif = "^0.17.6"
log = "^0.4.19"
pretty_env_logger = "^0.5.0"
structopt = "0.3.26"
